--- a/privacy.html
+++ b/privacy.html
@@ -46,13 +46,13 @@
     <p>Your data is used only to provide in-app functionality such as tracking progress and generating statistics. We do not share, sell, or monetize your data.</p>
 
     <h2>3. Data Storage</h2>
-    <p>All data is stored locally on your device unless you explicitly back it up via iCloud or other services.</p>
+    <p>All data is stored locally on your device unless you explicitly back it up via Firebase syncing at settings.</p>
 
     <h2>4. Your Rights</h2>
     <p>You can delete your data from the app at any time by using the reset or clear features available in the app settings.</p>
 
     <h2>5. Contact</h2>
-    <p>For privacy-related questions, contact us at <a href="mailto:support@yourapp.com">support@yourapp.com</a>.</p>
+    <p>For privacy-related questions, contact us at <a href="mailto:marufnebilogunc@gmail.com">marufnebilogunc@gmail.com</a>.</p>
 
     <p>We value your trust. Thank you for using Fitness Tracker AI!</p>
   </div>
