--- a/privacy.html
+++ b/privacy.html
@@ -46,7 +46,7 @@
     <p>Your data is used only to provide in-app functionality such as tracking progress and generating statistics. We do not share, sell, or monetize your data.</p>
 
     <h2>3. Data Storage</h2>
-    <p>All data is stored locally on your device unless you explicitly back it up via Firebase syncing at settings.</p>
+    <p>All data is stored locally on your device unless you explicitly back it up via syncing at settings.</p>
 
     <h2>4. Your Rights</h2>
     <p>You can delete your data from the app at any time by using the reset or clear features available in the app settings.</p>
